# FullStack-gpt

./: .gitignore  README.md  Research about the XZ backdoor.txt  main.py  notebook.ipynb  pyproject.toml  requirements.txt  researchGPT.ipynb
pages/: documentGPT.py  openAIGPT.py  quizGPT.py  siteGPT.py  testGPT.py
