[tool.poetry]
name = "fullstack-gpt"
version = "0.1.0"
description = "full stack gpt course with python"
authors = ["Luceta <57941164+Luceta@users.noreply.github.com>"]
license = "MIT"
readme = "README.md"
packages = [{include = "fullstack_gpt"}]

[tool.poetry.dependencies]
python = "^3.11"
ipykernel = "^6.29.3"
openai = "^1.13.3"
langchain-openai = "^0.0.8"
langchain = "^0.1.13"
python-dotenv = "^1.0.1"
tiktoken = "^0.6.0"
chromadb = "^0.4.24"
faiss-cpu = "^1.8.0"


[tool.poetry.group.dev.dependencies]
black = "^24.3.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
